# BaxterCurtin

./: README.md
setup/: Setup.md
ws/: baxter.sh  configure_ftdi.sh
ws/src/: .rosinstall  .rosinstall.bak
ws/src/Robotiq-2f-85-main/robotiq_2f_gripper_control/launch/: robotiq_action_server.launch
ws/src/Robotiq-2f-85-main/robotiq_2f_gripper_control/scripts/: robotiq_2f_action_server.py
ws/src/aidan/: CMakeLists.txt  package.xml
ws/src/aidan/launch/: insertion_services.launch
ws/src/aidan/msg/: AtiMsg.msg
ws/src/aidan/src/: VelocityController.py  atiPublisher.cpp  combinedEverything.py  moveAccuracyTest.py  moveService.py  netft.c  pickAndPlace.py  probeSurfaceService.py  searchService.py  test.py
ws/src/aidan/src/old/: VelocityController.py  graphForceData.py  move_to_pos.py  probeSurface.py
ws/src/aidan/srv/: armPos.srv  probe.srv  searchHole.srv
ws/src/ati_sensor_ros_driver/include/ati_sensor_ros_driver/: rpi_ati_net_ft.py
ws/src/ati_sensor_ros_driver/src/: ati_driver.py
ws/src/barrett-ros-pkg/: README.md
ws/src/barrett-ros-pkg/barrett_hand_node/: package.xml
ws/src/barrett-ros-pkg/barrett_hand_node/launch/: barrett_hand_node.launch
ws/src/barrett-ros-pkg/barrett_hand_node/src/: barrett_hand_node.cpp
ws/src/baxter/baxter_common/barrett_hand_vis/: CMakeLists.txt  package.xml
ws/src/baxter/baxter_common/robotiq_2f_85_gripper_vis/: CMakeLists.txt  README.md  (+1 more)
ws/src/baxter/old_baxter/: table+PVC.scene  table.scene
ws/src/baxter_tom/: CMakeLists.txt  package.xml
ws/src/baxter_tom/scripts/: ffb_place.py  pickup.py
ws/src/nathan/: CMakeLists.txt  package.xml  setup.py
ws/src/nathan/launch/: baxter_interface.launch  insertion_services.launch
ws/src/nathan/scripts/: pickup.py
ws/src/nathan/src/nathan/: ProbeSurfaceService.py  SearchService.py
ws/src/nathan/srv/: Probe.srv  SearchHole.srv
(+48 files in other folders)
